# counter-sa

./: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
config/: settings.yaml
config/streams/: _template.yaml
docker/: docker-compose.yml
easycount/: main.py
easycount/api/: app.py  schemas.py  websocket.py
easycount/api/routers/: counts.py  history.py  streams.py
easycount/core/: capturer.py  counter.py  detector.py  preprocessor.py  stream_worker.py  tracker.py
easycount/manager/: aggregator.py  stream_manager.py
easycount/storage/: database.py  memory_store.py
easycount/utils/: geometry.py  logging.py
frontend/: config.html  index.html
frontend/static/: app.js  config.css  config.js  style.css
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
models/: download_model.py
scripts/: benchmark.py  quantize_model.py  test_rtsp.py
tests/unit/: test_counter.py  test_geometry.py
