[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easycount"
version = "0.1.0"
description = "CPU-optimized vehicle and pedestrian counting from RTSP streams"
requires-python = ">=3.11"

dependencies = [
    "onnxruntime>=1.19",
    "opencv-python-headless>=4.9",
    "supervision>=0.21",
    "numpy>=2.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "scipy>=1.13",
    "onnx>=1.16",
    "python-multipart>=0.0.5",
    "aiofiles>=23",
]

[project.optional-dependencies]
export = [
    "ultralytics>=8.3",
]
quantize = [
    "onnxruntime==1.19.*",
    "onnx==1.16.*",
]
dev = [
    "pytest==8.*",
    "httpx==0.27.*",
    "pytest-asyncio==0.23.*",
    "py-spy==0.3.*",
    "ruff==0.4.*",
]

[project.scripts]
easycount = "easycount.main:main"

[tool.hatch.build.targets.wheel]
packages = ["easycount"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
